--- a/EquityTradingApplication/App.xaml
+++ b/EquityTradingApplication/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:EquityTradingApplication"
-             StartupUri="MainWindow.xaml">
+             StartupUri="View/EquityTradingMainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
