--- a/EquityTradingApplication/App.xaml
+++ b/EquityTradingApplication/App.xaml
@@ -4,6 +4,10 @@
              xmlns:local="clr-namespace:EquityTradingApplication"
              StartupUri="View/EquityTradingMainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Resources/Styles.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
