--- a/EquityTradingApplication/Resources/Styles.xaml
+++ b/EquityTradingApplication/Resources/Styles.xaml
@@ -1,13 +1,14 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <!-- Define a style for TextBlocks -->
+    
+    <!-- Style for TextBlocks -->
     <Style TargetType="TextBlock">
         <Setter Property="Foreground" Value="#FF1565C0"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="FontWeight" Value="Bold"/>
     </Style>
 
-    <!-- Define a style for TextBoxes -->
+    <!-- Style for TextBoxes -->
     <Style TargetType="TextBox">
         <Setter Property="Background" Value="#FFF1F8E9"/>
         <Setter Property="BorderBrush" Value="#FF81C784"/>
@@ -16,7 +17,7 @@
         <Setter Property="Padding" Value="5"/>
     </Style>
 
-    <!-- Define a style for ComboBoxes -->
+    <!-- Style for ComboBoxes -->
     <Style TargetType="ComboBox">
         <Setter Property="Background" Value="#FFF1F8E9"/>
         <Setter Property="BorderBrush" Value="#FF81C784"/>
@@ -25,15 +26,7 @@
         <Setter Property="Padding" Value="5"/>
     </Style>
 
-    <!-- Define a style for Buttons -->
-    <!--<Style TargetType="Button">
-        <Setter Property="Background" Value="#FF1565C0"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Setter Property="Padding" Value="10"/>
-        <Setter Property="Margin" Value="20,10,20,0"/>
-    </Style>-->
-
+    <!-- Style for Buttons -->
     <Style TargetType="Button">
         <Setter Property="Margin" Value="5"/>
         <Setter Property="Padding" Value="10,5"/>
@@ -59,6 +52,7 @@
         </Setter>
     </Style>
 
+    <!-- Style for DataGrid -->
     <Style TargetType="DataGrid">
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="GridLinesVisibility" Value="Horizontal" />
@@ -66,6 +60,8 @@
         <Setter Property="HeadersVisibility" Value="Column" />
         <Setter Property="RowBackground" Value="LightBlue" />
     </Style>
+
+    <!-- Style for DataGridColumnHeader -->
     <Style TargetType="DataGridColumnHeader">
         <Setter Property="FontFamily" Value="Segoe UI" />
         <Setter Property="Background" Value="#E1E1E1" />
